gcc/testsuite/rust/rustc/ui/duplicate/duplicate-parameter.rs
fn f(a: isize, a: isize) {}
// { dg-error ".E0415." "" { target *-*-* } .-1 }

fn main() {
}

